--- a/styles/hero.css
+++ b/styles/hero.css
@@ -1,15 +1,19 @@
 /* hero ---------------------------------------------------------------- */
 
 #hero {
+    display: flex;
+    flex-direction: column;
     padding: 3vw;
     padding-top: 125px;
     padding-bottom: 64px;
     position: relative;
-    height: auto; 
-    min-height: calc(100vh - 200px);
+    height: auto;
+    min-height: calc(100vh - 300px);
     background-image: url(../assets/bg.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    align-items: center;
+    justify-content: flex-end;
 }
 
 #hero h1 {
@@ -30,7 +34,7 @@ max-width: 500px;
 
 #hero p {
     position: absolute;
-    top: 30px;
+    top: 60px;
     right: 30px;
     text-align: center;
     color: #fff;
