--- a/styles/why.css
+++ b/styles/why.css
@@ -6,7 +6,7 @@
     position: relative;
     background-color: var(--primary);
     text-align: center;
-    padding: 80px 32px 32px 32px;
+    padding-top: 80px;
 }
 
 #why h2 {
@@ -27,6 +27,7 @@
     width: 100%;
     margin: 64px auto;
     margin-top: 32px;
+    padding: 0px 32px;
 }
 
 .line {
